src/CommentForm.less
@line-height: 1.4285714em;
@codemirror-editor-additional-padding: 5px;
// @border-color-var: var(--border-color-base, #a2a9b1);
@border-color-var: var(--border-color-subtle, #c8ccd1);

// Keep this synced with CommentForm#createTextInputs
@num-rows-comment: 4;
@num-rows-section: 6;

.cd-commentForm {
	display: flow-root;
	font-weight: normal;
	text-align: start;

	// The form may sometimes get inside a `<div dir="...">` element, so we need to reset the text
	// direction.
	direction: var(--cd-direction-user);

	margin: 0.5em 0;

	.cd-reformattedComments & {
		margin-block: 0.75em;
	}

	.oo-ui-textInputWidget {
		max-width: none;
	}

	.oo-ui-buttonElement-framed > .oo-ui-buttonElement-button {
		vertical-align: middle;
	}

	table.diff {
		margin-bottom: 0.5em;
	}

	.wikiEditor-ui-left {
		// Make a number in <ol> lists appear in front of the textarea, not below it.
		float: none;
	}

	.wikiEditor-ui-toolbar {
		// To make the shadow appear.
		z-index: 1;
	}

	.oo-ui-textInputWidget .oo-ui-inputWidget-input {
		border-color: @border-color-var;
		border-radius: 0;
	}

	.tool-button {
		// Until T312933 is fixed
		width: 2.14285714em;
		height: 2.14285714em;
		border: 1px solid transparent;

		// Otherwise, text may be visible in some combinations of content and user language (for
		// example, Russian Wikipedia and uselang=he).
		direction: var(--cd-direction-content);

		background-size: 1.4285714em;
	}

	.tool-button[rel="quote"] {
		background-color: var(--color-base-fixed, #202122);

		// `mask-image` was added to Chrome only in 2023-12-05
		-webkit-mask-image: url('/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=quotes&lang=en&skin=vector');
		mask-image: url('/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=quotes&lang=en&skin=vector');
		-webkit-mask-size: 1.4285714em;
		mask-size: 1.4285714em;
		-webkit-mask-repeat: no-repeat;
		mask-repeat: no-repeat;
		-webkit-mask-position: center;
		mask-position: center;
	}

	.cd-highlight .tool-button[rel="quote"] {
		background-color: var(--color-progressive, #36c);
	}

	.oo-ui-icon-syntax-highlight,
	.oo-ui-icon-cm-search {
		mask-size: contain;
		-webkit-mask-size: contain;
	}

	// Enough of this gray
	.wikiEditor-ui-toolbar {
		background-color: var(--background-color-base, #fff);
	}

	// Until T312970 is fixed
	.wikiEditor-ui-toolbar .tabs span.tab a {
		height: 2.14285714em;
		line-height: 2.14285714em;
		border: 1px solid transparent;

		&::before {
			height: 2.14285714em;
		}
	}

	.wikiEditor-ui-toolbar .group .label {
		height: 2em;
		line-height: 2em;
	}

	// Hide the group that has the "Preview" button on action=edit pages, but nothing in our case.
	.wikiEditor-ui-toolbar .group.empty {
		display: none;
	}

	// For absolutely positioned popups
	.wikiEditor-ui-text {
		position: relative;
	}


	/* CodeMirror */

	.cm-editor {
		background-color: var(--background-color-base, #fff);
		outline: 0;
		border: 0;

		&.cm-editor.cm-editor {
			// For autoresize
			height: 100% !important;
		}
	}

	.cm-gutters,

	// Override `.ͼ1 .cm-content`
	.cm-content.cm-content {
		min-height: calc(@line-height * (@num-rows-comment + 1) + @codemirror-editor-additional-padding) !important;
	}

	&-addSection,
	&-addSubsection,
	&-sectionOpeningComment {
		.cm-gutters,
		.cm-content.cm-content {
			min-height: calc(@line-height * (@num-rows-section + 1) + @codemirror-editor-additional-padding) !important;
		}
	}

	.ext-codemirror-wrapper--hidden textarea {
		// By default, it's `inline-block` which creates a gap between the textarea and the buttons.
		display: block !important;
	}

	.cm-panels,
	.cm-scroller {
		border: 1px solid @border-color-var;
	}

	.cm-panels,
	.cm-panel.cm-panel.cm-panel:last-child {
		border-bottom: 0;
	}

	.cm-focused .cm-scroller {
		border: 1px solid var(--border-color-progressive--focus, #36c);
		outline: 1px solid var(--color-progressive, #36c);

		// Fix for Firefox on Windows, e.g. with font size 112% where there appears a gap between the
		// border and the outline
		outline-offset: calc(-2px / var(--cd-pixel-deviation-ratio));
	}

	.cm-gutters {
		padding: 1px 0 1px 1px;
		box-sizing: content-box;
	}

	.cm-focused .cm-gutters {
		// Replace padding with margin to prevent the gutters from obstructing the blue outline.
		padding: 0;
		margin: 1px 0 1px 1px;
	}

	.cm-content {
		// Match the padding (when unfocused) or margin (when focused) of `.cm-gutters`.
		margin: 1px 1px 1px 0;
	}

	.ͼ1 .cm-scroller {
		// Proportional font size
		font-family: monospace, monospace;
	}

	.group-panels.group-panels {
		border-inline-end: none;
	}
}

body:not(.skin-monobook) .cd-commentForm .group-codemirror .oo-ui-buttonElement-button {
	height: 2.25em;
}

.cd-commentForm-checkboxes {
	text-align: start;
	direction: var(--cd-direction-user);

	.oo-ui-fieldLayout {
		margin-inline: 0 1em;

		&:last-child {
			margin-inline-end: 0;
		}
	}
}

.cd-commentForm-buttons {
	direction: var(--cd-direction-user);

	&-start {
		float: var(--cd-float-user-start);
	}

	&-end {
		float: var(--cd-float-user-end);
	}
}

.cd-commentForm-signature,
.cd-commentForm-previewArea span[style="opacity: 0.6;"] {
	// Too low contrast in DT
	opacity: 0.67 !important;
}

.cd-commentForm-dummyElement {
	height: 0;
	overflow: hidden;
}

.cd-commentForm-summaryInput {
	margin-top: 0.214286em;
}

.cd-commentForm-checkboxes {
	margin-top: 0.5em;
	line-height: 1;
}

.cd-commentForm-buttons {
	display: flow-root;
	margin-top: 0.5em;
}

.cd-commentForm-addSection.cd-commentForm-addSection,
.cd-commentForm-addSubsection.cd-commentForm-addSubsection {
	margin-top: 1.5em;
}
/* ... */

